<resources>
    <string name="app_name">FacebookPosts</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="posts">Posts</string>
    <string name="community">Community</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="learn_more">Learn More</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="dalia_maged">Dalia Maged</string>
</resources>