<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/first_row_liner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:layout_weight="0.2"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_arrow_back" />
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_search"
            android:layout_weight="2.6"
            android:backgroundTint="@color/dark_blue"
            android:textAlignment="center" />


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:layout_weight="0.2"
            app:srcCompat="@drawable/arrow"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/first_row_liner_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:text="@string/home"
            android:layout_weight="1"
            style="@style/text_style" />
        <TextView
            android:id="@+id/textView2"
            android:text="@string/posts"
            android:layout_weight="1"
            style="@style/text_style" />

        <TextView
            android:id="@+id/textView4"
            android:text="@string/videos"
            android:layout_weight="1"
            style="@style/text_style" />
        <TextView
            android:id="@+id/textView5"
            android:text="@string/photos"
            android:layout_weight="1"
            style="@style/text_style" />
        <TextView
            android:id="@+id/textView3"
            android:text="@string/community"
            android:layout_weight="1"
            style="@style/text_style" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_row_linear_layout" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="6dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.85"
            android:backgroundTint="@color/blue_fa23"
            app:icon="@drawable/i"
            app:iconGravity="textStart"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            android:text="@string/learn_more" />

        <ImageButton
            android:id="@+id/button2"
            style="@style/learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="0.075"
            android:background="@color/white"
            android:src="@drawable/messenger" />

        <ImageButton
            android:id="@+id/button3"
            style="@style/learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.075"
            android:background="@drawable/rounded_button"
            android:padding="4dp"
            android:src="@drawable/menu" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">


        <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/story_recyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>