<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"

    >

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/time_past"
        style="@style/text_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2  hrs"

        android:textColor="@color/light_grey"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toBottomOf="@id/person_name" />

    <TextView
        android:id="@+id/person_name"
        style="@style/text_details"
        android:text="Dalia Maged"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/time_past"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="@id/profileImage" />

    <ImageView
        android:id="@+id/public_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toStartOf="@id/imageView3"
        app:layout_constraintHorizontal_bias="0.1"

        app:layout_constraintStart_toEndOf="@id/person_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        app:srcCompat="@drawable/ic_baseline_public_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/post_content"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        app:srcCompat="@drawable/grey_menu" />

    <TextView
        android:id="@+id/post_content"
        style="@style/text_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="contenhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhht"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_content"
        tools:srcCompat="@drawable/p1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.button.MaterialButton
            style="@style/react_button"
            android:text="@string/like"

            app:icon="@drawable/like" />

        <com.google.android.material.button.MaterialButton
            style="@style/react_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            app:icon="@drawable/comment" />

        <com.google.android.material.button.MaterialButton
            style="@style/react_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:icon="@drawable/share" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>